fix(PreviewItemWithDates): add possibility to have items with sub-items
This allows to wrap .institution/.issuer and .address p in the same div,
in the same PreviewProfessionalExperiencePanel, PreviewEducationPanel,
and PreviewCoursesAndCertificatesPanel components, to avoid overflow
when those data were too long.

--- a/src/styles/base/TextWithIcon.css
+++ b/src/styles/base/TextWithIcon.css
@@ -10,7 +10,3 @@
   width: 1.1em;
   height: 1.1em;
 }
-
-.text-with-icon .text- {
-  vertical-align: center;
-}
